add about and blog page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ console.log('This runs in your terminal, not the browser!');
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>Hello, World!</h1>
+    <h1>About Page</h1>
   </body>
 </html>
 <style>
