--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,8 @@
 // Welcome to Astro! Everything between these triple-dash code fences
 // is your "component front matter". It never runs in the browser.
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = 'About Me';
 
@@ -41,9 +43,7 @@ const textCase = 'uppercase';
     </style>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
     <h1>{pageTitle}</h1>
     <p>Here are a few facts about me:</p>
     <ul>
@@ -62,5 +62,6 @@ const textCase = 'uppercase';
     {finished && <p>I finished this tutorial!</p>}
 
     {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+    <Footer />
   </body>
 </html>
