add script for hamburger menu

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,13 +2,18 @@
 // Welcome to Astro! Everything between these triple-dash code fences
 // is your "component front matter". It never runs in the browser.
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = 'My Blog Page'
 ---
 <!--  Below is your "component template." It's just HTML, but with
       some magic sprinkled in to help you build great templates. -->
+<style>
+  h1 {
+    color: orange;
+  }
+</style>
 <html>
   <head>
     <meta charset ="utf-8" />
@@ -16,7 +21,7 @@ const pageTitle = 'My Blog Page'
     <title>{pageTitle}</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
     <h1>{pageTitle}</h1>
     <ul>
       <li><a href="/posts/post-1/">Post 1</a></li>
@@ -24,10 +29,8 @@ const pageTitle = 'My Blog Page'
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
     <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
-<style>
-  h1 {
-    color: orange;
-  }
-</style>
